--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ body{
   margin-top: 60px;
   font-size: 2.6rem;
 }
+.progress-bar{
+  height: 5px;
+  background: var(--primary);
+  margin-top: 20px;
+}
 
 /* upload form styles */
 
@@ -36,6 +41,28 @@ body{
 
 
 /* image grid styles */
+.image-grid {
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 40px;
+}
 
+.image-wrap {
+  overflow: hidden;
+  height: 0;
+  padding: 50% 0;
+  position: relative;
+  opacity: 0.8;
+}
+
+.image-wrap img {
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 150%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 /* modal styles */
